--- a/APP/deploy/pom.xml
+++ b/APP/deploy/pom.xml
@@ -90,7 +90,7 @@
                     <plugin>
                         <groupId>org.wildfly.plugins</groupId>
                         <artifactId>wildfly-maven-plugin</artifactId>
-                        <version>1.0.2.Final</version>
+                        <version>1.1.0.Alpha11</version>
                         <executions>
                             <!-- Undeploy the application on clean -->
 		                    <execution>
