--- a/APP/deploy/pom.xml
+++ b/APP/deploy/pom.xml
@@ -133,6 +133,35 @@
                 </plugins>
             </build>
         </profile>
+		
+
+      <profile>
+            <id>weblogic</id>
+            <build>
+                <plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-ear-plugin</artifactId>
+						<version>2.7</version>
+						<configuration>
+							<defaultLibBundleDir>APP-INF/lib</defaultLibBundleDir>					
+							<modules>
+							 <ejbModule>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>spatial-model</artifactId>
+									<bundleDir>APP-INF/lib</bundleDir>							
+								</ejbModule>
+							   <jarModule>
+									<groupId>eu.europa.ec.fisheries.uvms</groupId>
+									<artifactId>usm4uvms</artifactId>		   
+									<bundleDir>/</bundleDir>					
+								</jarModule >						
+							</modules>
+						</configuration>
+					</plugin>
+                </plugins>
+            </build>
+        </profile>					
     </profiles>
 
 </project>
