--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -165,6 +165,23 @@
                 </plugins>
             </build>
         </profile>
+		<profile>
+            <id>weblogic</id>
+            <build>
+                <plugins>		
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.4</version>
+						<configuration>
+							<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>				
+						</configuration>
+					</plugin>
+                </plugins>							
+            </build>				
+		</profile>
+		 
+		
     </profiles>
 
 </project>
