--- a/pom.xml
+++ b/pom.xml
@@ -283,8 +283,8 @@
 
        
 	<scm>
-		 <connection>scm:git:https://empadhyad@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-spatialmodule-app.git</connection>
-		 <developerConnection>scm:git:https://empadhyad@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-spatialmodule-app.git</developerConnection>
+		 <connection>scm:git:https:///emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-spatialmodule-app.git</connection>
+		 <developerConnection>scm:git:https:///emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-spatialmodule-app.git</developerConnection>
 		 <url>https://emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/</url>
 	</scm>
 
