--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -1,18 +1,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>liquibase</groupId>
+	
     <artifactId>liquibase</artifactId>
-    <version>0.5.2-SNAPSHOT</version>
-    <name>liquibase</name>
+	<name>${project.artifactId}</name>
+    <packaging>pom</packaging>
+   
+    <parent>
+        <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
+        <artifactId>spatial-db</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+    </parent>
+	
+	    <dependencies>
 
-    <properties>
-        <liquibase.contexts>default</liquibase.contexts>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <citnetpath>webgate.ec.europa.eu/CITnet/</citnetpath>
-        <svn.projectname>UNIONVMS</svn.projectname>
-    </properties>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle</groupId>
+    		<artifactId>ojdbc6</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.lonnyj</groupId>
+            <artifactId>liquibase-spatial</artifactId>
+        </dependency>
+
+    </dependencies>
 
     <profiles>
 
@@ -47,74 +69,48 @@
                 <db.outputFile>changelog/generatedChangelog.xml</db.outputFile>
             </properties>
         </profile>
+
+        <profile>
+            <id>exec</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <version>3.5.1</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>com.github.lonnyj</groupId>
+                                <artifactId>liquibase-spatial</artifactId>
+                                <version>1.2.1</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                            <changeLogFile>${db.changeLogFile}</changeLogFile>
+                            <driver>${db.driver}</driver>
+                            <url>${db.url}</url>
+                            <username>${db.user}</username>
+                            <password>${db.passwd}</password>
+                            <defaultSchemaName>${db.defaultSchema}</defaultSchemaName>
+                            <outputChangeLogFile>${db.outputFile}</outputChangeLogFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>update-schema</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>update</goal>
+                                    <goal>tag</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         
     </profiles>
         
-    <dependencies>
-
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>3.5.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4-1201-jdbc41</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.oracle</groupId>
-    		<artifactId>ojdbc6</artifactId>
-    		<version>11.2.0.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.lonnyj</groupId>
-            <artifactId>liquibase-spatial</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.liquibase</groupId>
-                    <artifactId>liquibase-maven-plugin</artifactId>
-                    <version>3.5.1</version>
-                    <dependencies>
-                      <dependency>
-                        <groupId>com.github.lonnyj</groupId>
-                        <artifactId>liquibase-spatial</artifactId>
-                        <version>1.2.1</version>
-                      </dependency>
-                    </dependencies>
-                    <configuration>
-                        <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                        <changeLogFile>${db.changeLogFile}</changeLogFile>
-                        <driver>${db.driver}</driver>
-                        <url>${db.url}</url>
-                        <username>${db.user}</username>
-                        <password>${db.passwd}</password>
-                        <defaultSchemaName>${db.defaultSchema}</defaultSchemaName>
-                        <outputChangeLogFile>${db.outputFile}</outputChangeLogFile>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>update-schema</id>
-                            <phase>process-resources</phase>
-                            <goals>
-                                <goal>update</goal>
-                                <goal>tag</goal>							
-                            </goals>
-                        </execution>
-                    </executions> 
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
         
 </project>
